# AutoDev-Commander

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docker/compose/: base.yml  dev.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SETUP.md
scripts/: poetry_setup.sh  setup_environment.sh  setup_system.sh  start_autodev.sh  start_dev.sh  start_services.sh  stop_autodev.sh  validate_environment.sh  validate_paths.sh
src/app/: main.py
src/app/api/endpoints/: ai.py  health.py  vector.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: ai.py  test.py  vector.py  workflow.py  workflow.py.orig
src/app/core/: config.py  container.py  database.py  di.py  exceptions.py  logger.py  middleware.py
src/app/core/middleware/: __init__.py  error.py  metrics.py  rate_limit.py  tracing.py
src/app/schemas/: workflow.py
src/app/services/ai/: ollama_service.py
src/app/services/vector/: qdrant_service.py
src/app/services/workflow/: n8n_service.py  templates.py  workflow_service.py
src/core/: exceptions.py  middleware.py
