[tool.poetry]
name = "autodev-commander"
version = "0.1.0"
description = "AI-Driven Development Orchestration"
authors = ["Andy Fenner <andy@gruffsoftware.com>"]
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"  # Changed from 3.13 to match available Python version
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
httpx = "^0.26.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
redis = "^5.0.1"
qdrant-client = "^1.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autodev = "app.main:app"